<resources>
    <string name="app_name">StoryApps</string>
    <string name="email">Email</string>
    <string name="email_hint">Please Insert Your Email Address</string>
    <string name="password_hint">Please Insert Your Password</string>
    <string name="username_hint">Please Insert Your Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="register">Sign up</string>
    <string name="username">Username</string>
    <string name="register_error_message">Registration Failed, Please Check Your Email Or Password</string>
    <string name="email_error_message">Email address is invalid</string>
    <string name="username_error_message">Username Can\'t be empty</string>
    <string name="password_error_message">Password must be at least 6 characters long</string>
    <string name="login_error_message">Login Failed, Please Check Your Email Or Password</string>
    <string name="have_not_an_account">Don\'t have an account?</string>
    <string name="have_an_account">Have an account?</string>
    <string name="picture">Pictures</string>
    <string name="add_story">Add Story</string>
    <string name="new_story">New Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload_story">Upload Story</string>
    <string name="description">Write a description</string>
    <string name="error_picture">Failed to take a picture</string>
    <string name="error_camera">Failed to pop up camera</string>
    <string name="error_permission">Not getting permission</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="created_at">00/00/0000</string>
    <string name="success_upload_story">Your story has been created</string>
    <string name="failed_upload_story">Failed to create story, please try again</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="fail_load">Try Again</string>
    <string name="title_home">Story</string>
    <string name="title_maps">Maps</string>
    <string name="title_add_Story">Add Story</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="please_activate_location_message">Please activate your location services</string>
    <string name="location_permission_denied">Location permission not allowed</string>
    <string name="location_permission_denied_action">Change Setting</string>


</resources>