<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardViewList"
    android:layout_height="300dp"
    card_view:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="7dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="391dp"
            android:layout_height="183dp"
            android:contentDescription="@string/picture"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_created"
            style="@style/TextContent.Small"
            android:layout_marginTop="8dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/image"
            tools:text="@string/created_at" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextContent.Small.Bold"
            android:layout_marginTop="3dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_created"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/tv_story"
            style="@style/TextContent.data"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="14dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:text="@string/stories" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>